--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,10 +3,10 @@ html, body{
   font-family: Arial, Helvetica, sans-serif
 }
 
-a.active {
-  background-color: gray;
-}
+/*a.active {*/
+  /*background-color: gray;*/
+/*}*/
 
-selected {
-  background-color: gray;
+.selected {
+  background-color: #D3D3D3;
 }
