--- a/src/app/pages/message-list/message-list.component.html
+++ b/src/app/pages/message-list/message-list.component.html
@@ -1,8 +1,36 @@
-<ul *ngIf="!loading">
-  <li *ngFor="let message of messages"  [class.selected]="isSelected(message)" (click)="setSelected(message.id); isSelected(message)">
+<div *ngIf="!loading">
+  <div class="jumbotron" *ngFor="let message of messages"  [class.selected]="isSelected(message)" (click)="setSelected(message.id); isSelected(message)">
     <app-message [message]="message"></app-message>
-  </li>
-</ul>
+  </div>
+</div>
 <p *ngIf="loading">...loading</p>
-<button (click)="prevPage()">prev page</button>
-<button (click)="nextPage()">next page</button>
+<!-- Pagination -->
+<div class="row text-center">
+  <div class="col-lg-12">
+    <ul class="pagination">
+      <li>
+        <button (click)="prevPage()">&laquo;</button>
+      </li>
+      <li>
+        <button href="#" (click)="nextPage()">&raquo;</button>
+      </li>
+    </ul>
+  </div>
+</div>
+
+<div class="well">
+  <h4>Leave a Comment:</h4>
+  <form #f="ngForm"
+        (ngSubmit)="onSubmit(f.value)"
+        class="ui form">
+    <div class="form-group">
+      <label for="title">Title</label>
+      <textarea id="title" name="title" class="form-control" rows="1" ngModel></textarea>
+      <label for="message">Message</label>
+      <textarea id="message" name="body" class="form-control" rows="3" ngModel></textarea>
+      <label for="userId">User Id</label>
+      <textarea id="userId" name="userId" class="form-control" rows="1" ngModel></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
