--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,14 +1,25 @@
 /* this file will be extracted to main dist folder and is imported in index.html */
 /* This file is for setting global styles  */
 @import 'variables';
+@import 'bootstrap/dist/css/bootstrap.css';
 
+body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.navbar {
+  margin-bottom: 20px;
+}
 nav {
   margin-top: 16px;
 }
-
+ul .active{
+ background-color: transparent
+}
 nav a {
-  background-color: $nav-button-color;
-  color: white;
+  //background-color: $nav-button-color;
+  color: black;
   padding: 8px 16px;
   margin: 8px;
   vertical-align: middle;
