user detail page, message-list refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,9 @@
       <li routerLinkActive="active"><a data-toggle="pill" [routerLink]=" ['./messages'] "  >
         messages
       </a></li>
+      <li routerLinkActive="active"><a data-toggle="pill" [routerLink]=" ['./users'] "  >
+        users
+      </a></li>
     </ul>
   </div>
 </nav>
