--- a/src/app/components/message-list/message-list.component.html
+++ b/src/app/components/message-list/message-list.component.html
@@ -1,4 +1,5 @@
 <div *ngIf="!loading">
+  <h3 align="center">message list</h3>
   <div class="jumbotron" *ngFor="let message of messages"  [class.selected]="isSelected(message)" (click)="setSelected(message.id); isSelected(message)">
     <app-message [message]="message"></app-message>
   </div>
@@ -17,5 +18,3 @@
     </ul>
   </div>
 </div>
-
-<app-message-form></app-message-form>
